feat: only return carpool routes on serviceDate